case for Arizona

--- a/batch_bridging.ipynb
+++ b/batch_bridging.ipynb
@@ -70,8 +70,8 @@
    "outputs": [],
    "source": [
     "# input_folder = Path('/u/aurora-r0/havazli/disp-test-cases/DC_F834_T04/unwrapped')\n",
-    "input_folder = Path('/u/aurora-r0/havazli/disp-test-cases/Idaho/Idaho_V11/unwrapped')\n",
-    "output_folder = Path(f'{input_folder.parent}/unwrapped_bridging_masked')\n",
+    "input_folder = Path('/u/aurora-r0/havazli/disp-test-cases/Arizona_F7091_T27/Arizona_V1/unwrapped')\n",
+    "output_folder = Path(f'{input_folder.parent}/unwrapped_bridging')\n",
     "output_folder.mkdir(exist_ok=True)"
    ]
   },
@@ -95,7 +95,7 @@
    "source": [
     "def bridge_iteration(unw_file, conncomp_file, output_folder):\n",
     "    unw, conncomp, amp, profile, transform = get_unw_conncomp(unw_file, conncomp_file)\n",
-    "    unw = np.ma.masked_where(unw < -1000, unw)\n",
+    "    # unw = np.ma.masked_where(unw < -1000, unw)\n",
     "    cc = connectComponent(conncomp=conncomp, metadata=profile)\n",
     "    brdg_labels = cc.label()\n",
     "    bridges = cc.find_mst_bridge()\n",
@@ -121,7 +121,7 @@
     "    pool.starmap(bridge_iteration, [(unw, conncomp, output_folder) for unw, conncomp in zip(unw_file_list, conncomp_file_list)])\n",
     "et = time.time()\n",
     "elapsed_time = (et - st) / 60\n",
-    "print(f'Elapsed time: {elapsed_time} minutes') # Elapsed time: 68.6463327685992 minutes Idaho_V11"
+    "print(f'Elapsed time: {elapsed_time} minutes') # Elapsed time: 68.6463327685992 minutes Idaho_V11 # Elapsed time: 95.06511324644089 minutes Arizona_V1"
    ]
   },
   {
